--- a/state_manager.html
+++ b/state_manager.html
@@ -14,18 +14,22 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="js/phaser.min.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/Loadbar.js"></script>
+		<script type="text/javascript" src="js/Boot.js"></script>
+		<script type="text/javascript" src="js/Preload.js"></script>
 		<script type="text/javascript" src="js/Menu.js"></script>
+		<script type="text/javascript" src="js/Level1.js"></script>
 		<script type="text/javascript">
-			myGame.state.add('loadbar',myGame.loadbar);
-			myGame.state.add('menu',myGame.menu);
-			myGame.state.start('loadbar');
+			var myGame = new Phaser.Game(800, 600, Phaser.AUTO, '');
+			myGame.state.add('Boot',BasicGame.Boot);
+			myGame.state.add('Preload',BasicGame.Preload);
+			myGame.state.add('Menu',BasicGame.Menu);
+			myGame.state.add('Level1',BasicGame.Level1);
+			myGame.state.start('Boot');
 
 			$(function() {
 				setTimeout(function() {
 					$('canvas').click(function() {
-						myGame.state.start('menu');
+						myGame.state.start('Menu');
 					});
 				},500)
 			});
